--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg+xml" href="/AdabImage.jpg" />
+    <link rel="icon" type="image/jpg+xml" href="/LogoPng.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Adab.com</title>
   </head>
